CP-39 style: update tutors and sponsors

--- a/src/less/community/hacking-camp-2021s2.less
+++ b/src/less/community/hacking-camp-2021s2.less
@@ -1,6 +1,6 @@
 @import '../variables.less';
 
-@primaryBlue: #4444fd;
+@primaryBlue: #4450e6;
 @secondaryGreen: #37f4ad;
 @mainColor: #333;
 
@@ -68,12 +68,12 @@
       color: @mainColor;
 
       &:hover {
-        background-color: #26DD98;
+        background-color: #26dd98;
       }
     }
 
     &:hover {
-      background-color: #2323DB;
+      background-color: #2323db;
     }
   }
 
@@ -91,7 +91,8 @@
     width: 100%;
     height: 10em;
     padding: 3em;
-    background: center / cover no-repeat url('https://download.pingcap.com/images/community/hackathon2020/bg-banner.jpg');
+    background: center / cover no-repeat
+      url('https://download.pingcap.com/images/community/hackathon2020/bg-banner.jpg');
 
     .title {
       color: #fff;
@@ -109,7 +110,8 @@
       width: 16em;
       top: 1em;
       right: 3em;
-      background: center / contain no-repeat url('https://download.pingcap.com/images/community/hackathon2020/modal-header-inner.svg');
+      background: center / contain no-repeat
+        url('https://download.pingcap.com/images/community/hackathon2020/modal-header-inner.svg');
     }
   }
 
@@ -167,7 +169,8 @@
         width: 1.5em;
         height: 1.5em;
         border-radius: 50%;
-        background: center / cover no-repeat url('https://download.pingcap.com/images/community/hackathon2020/spot.svg');
+        background: center / cover no-repeat
+          url('https://download.pingcap.com/images/community/hackathon2020/spot.svg');
       }
     }
 
@@ -205,12 +208,14 @@
     content: '';
     display: block;
     position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 0.875 * @REM;
-    z-index: -1;
-    background-color: @secondaryGreen;
+    width: 92px;
+    height: 25px;
+    bottom: -2 * @REM;
+    left: 50%;
+    margin-left: -46px;
+    background: url('/images/community/hacking-camp-2021-s2/title-decoration.svg')
+      center center no-repeat;
+    background-size: 92px 25px;
   }
 }
 
@@ -230,7 +235,8 @@
 }
 
 .hacking-cam2021__banner {
-  background: url(https://download.pingcap.com/images/community/hacking-camp-2021-s1/banner-inner-new.png) no-repeat;
+  background: url(https://download.pingcap.com/images/community/hacking-camp-2021-s1/banner-inner-new.png)
+    no-repeat;
   padding-top: 28%;
   position: relative;
   width: 100%;
@@ -243,7 +249,8 @@
 .hackathon2020__banner {
   width: 100%;
   height: 0;
-  background: center / cover no-repeat url('https://download.pingcap.com/images/community/hackathon2020/bg-banner.jpg');
+  background: center / cover no-repeat
+    url('https://download.pingcap.com/images/community/hackathon2020/bg-banner.jpg');
   margin-top: @headerHeight;
   padding: 30em 1em 0 1em;
 
@@ -252,7 +259,8 @@
   }
 
   .hacking-camp {
-    background: center / contain no-repeat url('https://download.pingcap.com/images/community/hacking-camp-2021-s1/banner-inner.png');
+    background: center / contain no-repeat
+      url('https://download.pingcap.com/images/community/hacking-camp-2021-s1/banner-inner.png');
   }
 
   .banner__inner {
@@ -261,7 +269,8 @@
     left: 0;
     width: 48em;
     height: 16em;
-    background: left / contain no-repeat url('https://download.pingcap.com/images/community/hackathon2020/banner-inner.svg');
+    background: left / contain no-repeat
+      url('https://download.pingcap.com/images/community/hackathon2020/banner-inner.svg');
   }
 
   .banner__buttons {
@@ -297,11 +306,12 @@
       .h-center();
       width: 2.5em;
       height: 6px;
-      background-color: @secondaryGreen;
+      background-color: @primaryBlue;
     }
 
+    &.active,
     &:hover {
-      color: #4444FD;
+      color: @primaryBlue;
     }
   }
 
@@ -326,6 +336,10 @@
 .hackathon2020__intro {
   max-width: 55em;
   margin: 0 auto;
+
+  &.left-align {
+    text-align: left;
+  }
 
   &:not(:last-child) {
     margin-bottom: 1.5em;
@@ -355,7 +369,8 @@
   .highlight__title {
     height: 3em;
     line-height: 3em;
-    background: center / contain no-repeat url('https://download.pingcap.com/images/community/hackathon2020/infinite-blue.svg');
+    background: center / contain no-repeat
+      url('https://download.pingcap.com/images/community/hackathon2020/infinite-blue.svg');
     font-size: 1.25em;
     color: @secondaryGreen;
   }
@@ -385,7 +400,7 @@
     width: 250px;
     height: 335px;
     position: relative;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.05),
       0 0 0 1px rgba(10, 10, 10, 0.02);
 
@@ -403,7 +418,7 @@
 
   .team-info {
     text-align: center;
-    color: #1A1A24;
+    color: #1a1a24;
     margin-top: 18px;
 
     p {
@@ -449,8 +464,8 @@
 
     .GitHub-repo {
       position: relative;
-      background-color: #F7F8F9;
-      color: #4444FD;
+      background-color: #f7f8f9;
+      color: #4444fd;
       border: none;
       padding: 10px;
       border-radius: 4px;
@@ -458,7 +473,7 @@
       cursor: pointer;
 
       &:hover {
-        background-color: #4444FD;
+        background-color: #4444fd;
         color: white;
       }
     }
@@ -496,9 +511,9 @@
   }
 
   .more-project-btn {
-    border: 1px solid #0D309E;
+    border: 1px solid #0d309e;
     border-radius: 30px;
-    color: #0D309E;
+    color: #0d309e;
     background-color: white;
     padding: 15px 25px;
     font-size: 16px;
@@ -506,7 +521,7 @@
     cursor: pointer;
 
     &:hover {
-      background-color: #0D309E;
+      background-color: #0d309e;
       color: white;
     }
   }
@@ -593,7 +608,8 @@
   margin: 1em 1.5em;
   padding: 2em 3em;
   border-radius: 10px;
-  background: center / cover no-repeat url('https://download.pingcap.com/images/community/hackathon2020/bg-banner.jpg');
+  background: center / cover no-repeat
+    url('https://download.pingcap.com/images/community/hackathon2020/bg-banner.jpg');
   color: #fff;
 
   .btn {
@@ -618,7 +634,8 @@
 .schedule__title {
   height: 4em;
   line-height: 2em;
-  background: center / contain no-repeat url('https://download.pingcap.com/images/community/hackathon2020/infinite-dark-blue.svg');
+  background: center / contain no-repeat
+    url('https://download.pingcap.com/images/community/hackathon2020/infinite-dark-blue.svg');
   color: @secondaryGreen;
 
   .name {
@@ -632,7 +649,7 @@
 
 .prize-container {
   justify-content: center;
-  padding: 1em .75em !important;
+  padding: 1em 0.75em !important;
 }
 
 .award-card {
@@ -775,32 +792,24 @@
   align-items: center;
   width: 200px;
   margin: 1em 3em 3em;
-
-  &.hacking-camp {
-    margin: 1em 6em 3em;
-  }
 }
 
 .tutor__avatar {
-  width: 10em;
-  height: 10em;
+  width: 120px;
+  height: 120px;
   margin-bottom: 1em;
 
   img {
+    width: 100%;
+    height: 100%;
     display: block;
-    width: 80%;
-    height: 80%;
-    margin: 0 auto;
   }
 }
 
 .tutor__name {
   margin-bottom: 0.5em;
   font-size: 1.125em;
-
-  &.hacking-camp {
-    font-weight: 600;
-  }
+  font-weight: 600;
 }
 
 .hackathon2020__section-faq {
@@ -880,17 +889,11 @@
 .partners {
   max-width: 1024px;
   margin: 4rem auto;
-
-  .sponsor-type {
-    font-size: 0.9rem;
-    text-align: center;
-    padding-top: 10px;
-  }
 }
 
 .sponsor-type {
-  margin: 1em 0;
-  color: inherit;
+  margin-top: 2rem;
+  font-weight: bold;
 }
 
 .partners-list {
@@ -1091,7 +1094,8 @@
 
 @media (max-width: 428px) {
   .hacking-cam2021__banner {
-    background: url(https://download.pingcap.com/images/community/activities/home-tidb-hacking-camp-2021-carousel.png) no-repeat;
+    background: url(https://download.pingcap.com/images/community/activities/home-tidb-hacking-camp-2021-carousel.png)
+      no-repeat;
     padding-top: 68%;
     margin-top: 3rem;
   }
