--- a/layouts/community-cn/hacking-camp-2021-season-2.html
+++ b/layouts/community-cn/hacking-camp-2021-season-2.html
@@ -37,18 +37,16 @@
 	<section class="hackathon2020__section hackathon2020__section-about">
 		<h2 class="section__title" id="about">关于 Hacking Camp</h2>
 		<div class="container">
-			<p class="hackathon2020__intro">
-				2021 年 1 月结束的 TiDB 黑客马拉松中诞生了许多明星项目，如 UDF、图数据库、文档自动纠错等等，为 TiDB 构建了丰富的生态和卓越的性能提升，令人不禁感叹「社区的力量」。
+			<p class="hackathon2020__intro left-align">
+				TiDB Hacking Camp 是一个长期的孵化项目，每年举办 1-3 期。活动联合了生态伙伴、合作企业等，旨在帮助 TiDB 生态项目从社区中获取更多资源和帮助，使其能够快速成长达到有实际应用场景的成熟阶段。本期的主题是「生态」。入选项目都将围绕着 TiDB 周边生态进行打磨。
 			</p>
-			<p class="hackathon2020__intro">
-				为了让这些项目能够真正落地，继续在社区中发光发热，TiDB 社区联合经纬中国计划在 2 月举办一个为期 8周的 Hacking Camp。本次活动将邀请 PingCAP
-				及合作伙伴提供导师，帮助项目团队一起制定合理的后续计划和商业方向，并将向社区公开阶段性成果。
+			<p class="hackathon2020__intro left-align">
+				本次活动的入围项目也面向社区公开招募贡献者。只要解决本期任一项目的 issue 就可以成为 Hacking Camp 的 contributor，获得贡献者好礼！对于开发者来说，通过深度参与和贡献 Hacking Camp 中的孵化项目，不仅可以提升技术实力，活跃的贡献者还能提高在开源社区中的影响力。
 			</p>
-			<p class="hackathon2020__intro">第一期 Hacking Camp 结束后将由每支队伍的导师评估是否可以顺利毕业。所有毕业的团队队员将获得 TiDB 定制周边一份。</p>
 		</div>
 	</section>
 
-	<section class="hackathon2020__section hackathon2020__section-winners">
+	<!-- <section class="hackathon2020__section hackathon2020__section-winners">
 		<h2 class="section__title" id="winners">第一期入围项目</h2>
 		<p class="desc">第一期 Hacking Camp 共有 5 个项目入围，感兴趣的小伙伴可以点击加入队伍下方的交流群，共同为项目添砖加瓦。</p>
 		<div class="list">
@@ -72,8 +70,7 @@
 			</div>
 			{{- end -}}
 		</div>
-	</section>
-
+	</section> -->
 
 	<section class="hackathon2020__section">
 		<h2 class="section__title" id="timeline">Hacking Camp 时间线</h2>
@@ -93,17 +90,22 @@
 	</section>
 
 	<section class="hackathon2020__section">
-		<h2 class="section__title" id="judges">Hacking Camp 导师团</h2>
-		<div class="list-flex container">
-			{{- range $idx, $i := .Site.Data.hacking_camp_2021_s1.judges -}}
-			<div class="tutor-item hacking-camp">
-				<div class="tutor__avatar">
-					<img class="lazy" src="/images/svgs/loader-spinner.svg" data-original="{{ $i.avatar }}" alt="Tutor avatar" />
+		<h2 class="section__title" id="judges">Hacking Camp 组委会与导师团</h2>
+		<div class="container">
+			<p class="hackathon2020__intro">
+				Hacking Camp 组委会为活动协调资源、制定项目毕业标准等。本次组委会由部分 TOC 成员以及xxx 资本、xx 资本组成。导师团负责与团队沟通并提供项目的指导方向，对团队的项目规划提出合理的建议。
+			</p>
+			<div class="list-flex">
+				{{- range $idx, $i := .Site.Data.hacking_camp_2021_s1.judges -}}
+				<div class="tutor-item">
+					<div class="tutor__avatar">
+						<img class="lazy" src="/images/svgs/loader-spinner.svg" data-original="{{ $i.avatar }}" alt="Tutor avatar" />
+					</div>
+					<div class="tutor__name">{{ $i.name }} | {{ $i.team_name }} </div>
+					<div class="tutor__title">{{ $i.word }}</div>
 				</div>
-				<div class="tutor__name hacking-camp">{{ $i.name }} | {{ $i.team_name }} </div>
-				<div class="tutor__title">{{ $i.word }}</div>
+				{{- end -}}
 			</div>
-			{{- end -}}
 		</div>
 	</section>
 
