--- a/layouts/community-cn/hacking-camp-2021-season-2.html
+++ b/layouts/community-cn/hacking-camp-2021-season-2.html
@@ -13,40 +13,47 @@
 
 {{- define "main" -}}
 <div class="hackathon2020">
-	<section class="hacking-cam2021__banner"></section>
+  <section class="hacking-cam2021__banner"></section>
 
-	<section class="hackathon2020__navbar navbar-sticky">
-		<div class="container">
-			<ul class="navbar">
-				<li class="navbar__item">
-					<a href="#about">关于 Hacking Camp</a>
-				</li>
-				<li class="navbar__item">
-					<a href="#winners">第一期入围项目</a>
-				</li>
-				<li class="navbar__item">
-					<a href="#timeline">Hacking Camp 时间线</a>
-				</li>
-				<li class="navbar__item">
-					<a href="#partners">赞助合作</a>
-				</li>
-			</ul>
-		</div>
-	</section>
+  <section class="hackathon2020__navbar navbar-sticky">
+    <div class="container">
+      <ul class="navbar">
+        <li class="navbar__item">
+          <a href="#about">关于 Hacking Camp</a>
+        </li>
+        <li class="navbar__item">
+          <a href="#winners">第一期入围项目</a>
+        </li>
+        <li class="navbar__item">
+          <a href="#timeline">Hacking Camp 时间线</a>
+        </li>
+        <li class="navbar__item">
+          <a href="#partners">赞助合作</a>
+        </li>
+      </ul>
+    </div>
+  </section>
 
-	<section class="hackathon2020__section hackathon2020__section-about">
-		<h2 class="section__title" id="about">关于 Hacking Camp</h2>
-		<div class="container">
-			<p class="hackathon2020__intro left-align">
-				TiDB Hacking Camp 是一个长期的孵化项目，每年举办 1-3 期。活动联合了生态伙伴、合作企业等，旨在帮助 TiDB 生态项目从社区中获取更多资源和帮助，使其能够快速成长达到有实际应用场景的成熟阶段。本期的主题是「生态」。入选项目都将围绕着 TiDB 周边生态进行打磨。
-			</p>
-			<p class="hackathon2020__intro left-align">
-				本次活动的入围项目也面向社区公开招募贡献者。只要解决本期任一项目的 issue 就可以成为 Hacking Camp 的 contributor，获得贡献者好礼！对于开发者来说，通过深度参与和贡献 Hacking Camp 中的孵化项目，不仅可以提升技术实力，活跃的贡献者还能提高在开源社区中的影响力。
-			</p>
-		</div>
-	</section>
+  <section class="hackathon2020__section hackathon2020__section-about">
+    <h2 class="section__title" id="about">关于 Hacking Camp</h2>
+    <div class="container">
+      <p class="hackathon2020__intro left-align">
+        TiDB Hacking Camp 是一个长期的孵化项目，每年举办 1-3
+        期。活动联合了生态伙伴、合作企业等，旨在帮助 TiDB
+        生态项目从社区中获取更多资源和帮助，使其能够快速成长达到有实际应用场景的成熟阶段。本期的主题是「生态」。入选项目都将围绕着
+        TiDB 周边生态进行打磨。
+      </p>
+      <p class="hackathon2020__intro left-align">
+        本次活动的入围项目也面向社区公开招募贡献者。只要解决本期任一项目的 issue
+        就可以成为 Hacking Camp 的
+        contributor，获得贡献者好礼！对于开发者来说，通过深度参与和贡献 Hacking
+        Camp
+        中的孵化项目，不仅可以提升技术实力，活跃的贡献者还能提高在开源社区中的影响力。
+      </p>
+    </div>
+  </section>
 
-	<!-- <section class="hackathon2020__section hackathon2020__section-winners">
+  <!-- <section class="hackathon2020__section hackathon2020__section-winners">
 		<h2 class="section__title" id="winners">第一期入围项目</h2>
 		<p class="desc">第一期 Hacking Camp 共有 5 个项目入围，感兴趣的小伙伴可以点击加入队伍下方的交流群，共同为项目添砖加瓦。</p>
 		<div class="list">
@@ -72,82 +79,111 @@
 		</div>
 	</section> -->
 
-	<section class="hackathon2020__section">
-		<h2 class="section__title" id="timeline">Hacking Camp 时间线</h2>
-		<div class="container">
-			<ul class="moments">
-				{{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.moments -}}
-				<li class="moment-item hacking-camp-moment">
-					<div class="moment__milestone"><span class="spot"></span></div>
-					<div class="moment__content">
-						<p>{{ $i.date }}</p>
-						<p>{{ $i.name }}</p>
-					</div>
-				</li>
-				{{- end -}}
-			</ul>
-		</div>
-	</section>
+  <section class="hackathon2020__section">
+    <h2 class="section__title" id="timeline">Hacking Camp 时间线</h2>
+    <div class="container">
+      <ul class="moments">
+        {{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.moments -}}
+        <li class="moment-item hacking-camp-moment">
+          <div class="moment__milestone"><span class="spot"></span></div>
+          <div class="moment__content">
+            <p>{{ $i.date }}</p>
+            <p>{{ $i.name }}</p>
+          </div>
+        </li>
+        {{- end -}}
+      </ul>
+    </div>
+  </section>
 
-	<section class="hackathon2020__section">
-		<h2 class="section__title" id="judges">Hacking Camp 组委会与导师团</h2>
-		<div class="container">
-			<p class="hackathon2020__intro">
-				Hacking Camp 组委会为活动协调资源、制定项目毕业标准等。本次组委会由部分 TOC 成员以及xxx 资本、xx 资本组成。导师团负责与团队沟通并提供项目的指导方向，对团队的项目规划提出合理的建议。
-			</p>
-			<div class="list-flex">
-				{{- range $idx, $i := .Site.Data.hacking_camp_2021_s1.judges -}}
-				<div class="tutor-item">
-					<div class="tutor__avatar">
-						<img class="lazy" src="/images/svgs/loader-spinner.svg" data-original="{{ $i.avatar }}" alt="Tutor avatar" />
-					</div>
-					<div class="tutor__name">{{ $i.name }} | {{ $i.team_name }} </div>
-					<div class="tutor__title">{{ $i.word }}</div>
-				</div>
+  <section class="hackathon2020__section">
+    <h2 class="section__title" id="judges">Hacking Camp 组委会与导师团</h2>
+    <div class="container">
+      <p class="hackathon2020__intro">
+        Hacking Camp 组委会为活动协调资源、制定项目毕业标准等。本次组委会由部分
+        TOC 成员以及xxx 资本、xx
+        资本组成。导师团负责与团队沟通并提供项目的指导方向，对团队的项目规划提出合理的建议。
+      </p>
+      <div class="list-flex">
+        {{- range $idx, $i := .Site.Data.hacking_camp_2021_s1.judges -}}
+        <div class="tutor-item">
+          <div class="tutor__avatar">
+            <img
+              class="lazy"
+              src="/images/svgs/loader-spinner.svg"
+              data-original="{{ $i.avatar }}"
+              alt="Tutor avatar"
+            />
+          </div>
+          <div class="tutor__name">{{ $i.name }} | {{ $i.team_name }}</div>
+          <div class="tutor__title">{{ $i.word }}</div>
+        </div>
+        {{- end -}}
+      </div>
+    </div>
+  </section>
+
+  <section class="hackathon2020__section partners-list">
+    <h2 class="section__title" id="partners">赞助合作</h2>
+
+		<div class="exclusive-sponvers">
+			<h3 class="sponsor-type">独家冠名</h3>
+			<div class="list-flex container">
+				{{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.exclusive -}}
+				<a href="{{ $i.link }}" target="_blank" rel="noopener noreferrer">
+					<img
+						class="lazy {{ $i.name }}"
+						data-original="/images/community/hacking-camp-2021-s2/logos/{{ $i.name }}.svg"
+						src="/images/svgs/loader-spinner.svg"
+						alt="sponsor logo"
+					/>
+				</a>
 				{{- end -}}
 			</div>
 		</div>
-	</section>
 
-	<section class="hackathon2020__section">
-		<h2 class="section__title" id="partners">赞助合作</h2>
-		<h3 class="sponsor-type">独家冠名</h3>
-		<div class="list-flex container partners-list hacking-camp">
-			{{- range $idx, $i := .Site.Data.hacking_camp_2021_s1.exclusive -}}
-			<a href="{{ $i.link }}" target="_blank" rel="noopener noreferrer">
-				<img class="lazy exclusive" data-original="{{ $i.img }}" src="/images/svgs/loader-spinner.svg"
-					alt="sponsor logo">
-			</a>
-			{{- end -}}
+		<div class="common-sponsors">
+			<h3 class="sponsor-type">协办方</h3>
+			<div class="list-flex container">
+				{{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.sponsors1 -}}
+				<a href="{{ $i.link }}" target="_blank" rel="noopener noreferrer">
+					<img
+						class="lazy {{ $i.name }}"
+						data-original="/images/community/hacking-camp-2021-s2/logos/{{ $i.name }}.svg"
+						src="/images/svgs/loader-spinner.svg"
+						alt="sponsor logo"
+					/>
+				</a>
+				{{- end -}}
+			</div>
 		</div>
-		<h3 class="sponsor-type">协办方</h3>
-		<div class="list-flex container partners-list hacking-camp">
-			{{- range $idx, $i := .Site.Data.hacking_camp_2021_s1.sponsors1 -}}
-			<a href="{{ $i.link }}" target="_blank" rel="noopener noreferrer">
-				<img class="lazy {{ if $i.bigImg }}big-img{{ end }}" data-original="{{ $i.img }}"
-					src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
-			</a>
-			{{- end -}}
+
+		<div class="common-sponsors">
+			<h3 class="sponsor-type">支持企业及社区</h3>
+			<div class="list-flex container">
+				{{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.sponsors2 -}}
+				<a href="{{ $i.link }}" target="_blank" rel="noopener noreferrer">
+					<img
+						class="lazy {{ $i.name }}"
+						data-original="/images/community/hacking-camp-2021-s2/logos/{{ $i.name }}.svg"
+						src="/images/svgs/loader-spinner.svg"
+						alt="sponsor logo"
+					/>
+				</a>
+				{{- end -}}
+			</div>
 		</div>
-		<h3 class="sponsor-type">支持企业及社区</h3>
-		<div class="list-flex container partners-list hacking-camp">
-			{{- range $idx, $i := .Site.Data.hacking_camp_2021_s1.sponsors2 -}}
-			<a href="{{ $i.link }}" target="_blank" rel="noopener noreferrer">
-				<img class="lazy" data-original="{{ $i.img }}" src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
-			</a>
-			{{- end -}}
-		</div>
-	</section>
+  </section>
 </div>
 {{- end -}}
 
 {{- define "footJS" -}}
 <script type="text/javascript" src="/js/vendor/lazyload.min.js"></script>
 <script type="text/javascript">
-	$('.lazy').lazyload({
-		effect: 'fadeIn',
-		threshold: 200
-	})
+  $('.lazy').lazyload({
+    effect: 'fadeIn',
+    threshold: 200,
+  })
 </script>
 <script type="text/javascript" src="/js/hacking_camp_2021s2.js"></script>
 <script type="text/javascript" src="/js/community.js"></script>
