CPT-262 fix: fix other images

--- a/layouts/community-cn/devcon2019.html
+++ b/layouts/community-cn/devcon2019.html
@@ -45,7 +45,7 @@
           position: [116.436266,39.980987],
           icon: new AMap.Icon({
             size: new AMap.Size(32, 32), //图标大小
-            image: '/images/svgs/location.svg'
+            image: '/archived/images/svgs/location.svg'
           })
         })
 
