CP-39 feat: update tuitors' avatars and description

--- a/layouts/community-cn/hacking-camp-2021-season-2.html
+++ b/layouts/community-cn/hacking-camp-2021-season-2.html
@@ -38,46 +38,41 @@
     <h2 class="section__title" id="about">关于 Hacking Camp</h2>
     <div class="container">
       <p class="hackathon2020__intro left-align">
-        TiDB Hacking Camp 是一个长期的孵化项目，每年举办 1-3
-        期。活动联合了生态伙伴、合作企业等，旨在帮助 TiDB
-        生态项目从社区中获取更多资源和帮助，使其能够快速成长达到有实际应用场景的成熟阶段。本期的主题是「生态」。入选项目都将围绕着
-        TiDB 周边生态进行打磨。
+        TiDB Hacking Camp 是一个长期的孵化项目，每年举办 1-3 期。活动联合了生态伙伴、合作企业等，旨在帮助 TiDB 生态项目从社区中获取更多资源和帮助，使其能够快速成长达到有实际应用场景的成熟阶段。本期的主题是「生态」。入选项目都将围绕着 TiDB 周边生态进行打磨。
       </p>
       <p class="hackathon2020__intro left-align">
-        本次活动的入围项目也面向社区公开招募贡献者。只要解决本期任一项目的 issue
-        就可以成为 Hacking Camp 的
-        contributor，获得贡献者好礼！对于开发者来说，通过深度参与和贡献 Hacking
-        Camp
-        中的孵化项目，不仅可以提升技术实力，活跃的贡献者还能提高在开源社区中的影响力。
+        本次活动的入围项目也面向社区公开招募贡献者。只要解决本期任一项目的 issue 就可以成为 Hacking Camp 的 contributor，获得贡献者好礼！对于开发者来说，通过深度参与和贡献 Hacking Camp 中的孵化项目，不仅可以提升技术实力，活跃的贡献者还能提高在开源社区中的影响力。
       </p>
     </div>
   </section>
 
-  <!-- <section class="hackathon2020__section hackathon2020__section-winners">
+  <section class="hackathon2020__section hackathon2020__section-winners">
 		<h2 class="section__title" id="winners">第一期入围项目</h2>
-		<p class="desc">第一期 Hacking Camp 共有 5 个项目入围，感兴趣的小伙伴可以点击加入队伍下方的交流群，共同为项目添砖加瓦。</p>
-		<div class="list">
-			{{- range $idx, $i := .Site.Data.hacking_camp_2021_s1.winners -}}
-			<div class="winner-team hacking-camp">
-				<div class="thumbnail">
-					<img class="lazy thumbnail-img" data-original="{{ $i.thumbnail }}" src="/images/svgs/loader-spinner.svg"
-						alt="team-avatar" />
-					<p class="thumbnail-text j-thumbnailText-click">{{ $i.project_intro }}</p>
-				</div>
-				{{- partial "tidb-planet/modal" (dict "type" "schedule" "modal_img" $i.modal_img) -}}
-				<div class="team-info">
-					<p class="project-name">{{ $i.project_name }}</p>
-				</div>
-				<div class="misc">
-					<div class="misc-btns">
-						<a href="{{ $i.btn_link }}" target="_blank"><button class="GitHub-repo">{{ $i.btn_name }}</button></a>
-						<a href="{{ $i.project_addr }}" target="_blank"><button class="GitHub-repo">项目地址</button></a>
-					</div>
-				</div>
-			</div>
-			{{- end -}}
+    <div class="container">
+      <p class="hackathon2020__intro">第一期 Hacking Camp 共有 6 个项目入围，分别为 HugeGraph、Doris、Juicefs、TiBigData，都是机基于 TiDB 的生态项目。感兴趣的小伙伴可以加入讨论区或为项目贡献自己的一份力量～</p>
+      <div class="list">
+        {{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.winners -}}
+        <div class="winner-team hacking-camp">
+          <div class="thumbnail">
+            <img class="lazy thumbnail-img" data-original="{{ $i.thumbnail }}" src="/images/svgs/loader-spinner.svg"
+              alt="team-avatar" />
+            <p class="thumbnail-text j-thumbnailText-click">{{ $i.project_intro }}</p>
+          </div>
+          {{- partial "tidb-planet/modal" (dict "type" "schedule" "modal_img" $i.modal_img) -}}
+          <div class="team-info">
+            <p class="project-name">{{ $i.project_name }}</p>
+          </div>
+          <div class="misc">
+            <div class="misc-btns">
+              <a href="{{ $i.btn_link }}" target="_blank"><button class="GitHub-repo">{{ $i.btn_name }}</button></a>
+              <a href="{{ $i.project_addr }}" target="_blank"><button class="GitHub-repo">项目地址</button></a>
+            </div>
+          </div>
+        </div>
+        {{- end -}}
+      </div>
 		</div>
-	</section> -->
+	</section>
 
   <section class="hackathon2020__section">
     <h2 class="section__title" id="timeline">Hacking Camp 时间线</h2>
@@ -105,7 +100,7 @@
         资本组成。导师团负责与团队沟通并提供项目的指导方向，对团队的项目规划提出合理的建议。
       </p>
       <div class="list-flex">
-        {{- range $idx, $i := .Site.Data.hacking_camp_2021_s1.judges -}}
+        {{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.judges -}}
         <div class="tutor-item">
           <div class="tutor__avatar">
             <img
@@ -132,7 +127,7 @@
 				{{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.exclusive -}}
 				<a href="{{ $i.link }}" target="_blank" rel="noopener noreferrer">
 					<img
-						class="lazy {{ $i.name }}"
+						class="lazy logo-{{ $i.name }}"
 						data-original="/images/community/hacking-camp-2021-s2/logos/{{ $i.name }}.svg"
 						src="/images/svgs/loader-spinner.svg"
 						alt="sponsor logo"
@@ -148,7 +143,7 @@
 				{{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.sponsors1 -}}
 				<a href="{{ $i.link }}" target="_blank" rel="noopener noreferrer">
 					<img
-						class="lazy {{ $i.name }}"
+						class="lazy logo-{{ $i.name }}"
 						data-original="/images/community/hacking-camp-2021-s2/logos/{{ $i.name }}.svg"
 						src="/images/svgs/loader-spinner.svg"
 						alt="sponsor logo"
@@ -164,7 +159,7 @@
 				{{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.sponsors2 -}}
 				<a href="{{ $i.link }}" target="_blank" rel="noopener noreferrer">
 					<img
-						class="lazy {{ $i.name }}"
+						class="lazy logo-{{ $i.name }}"
 						data-original="/images/community/hacking-camp-2021-s2/logos/{{ $i.name }}.svg"
 						src="/images/svgs/loader-spinner.svg"
 						alt="sponsor logo"
