--- a/src/less/community/hacking-camp-2021s2.less
+++ b/src/less/community/hacking-camp-2021s2.less
@@ -913,17 +913,17 @@
       height: 3em;
       width: auto;
 
-      &.ggv-capital,
-      &.juice-fs {
+      &.logo-ggv-capital,
+      &.logo-juice-fs {
         height: 2em;
       }
 
-      &.tenfund {
+      &.logo-10fund {
         height: 4em;
       }
 
-      &.matrix,
-      &.chuxin-capital {
+      &.logo-matrix,
+      &.logo-chuxin-capital {
         height: 5em;
       }
     }
