--- a/layouts/meetup/list.html
+++ b/layouts/meetup/list.html
@@ -71,7 +71,7 @@
         </div>
     </div>
 
-    {{- partial "archives/readMoreBtn.html" (dict "url" "/meetup/recording" "btnText" "更多文章") }}
+    {{- partial "archives/readMoreBtn.html" (dict "url" "/archived/meetup/recording" "btnText" "更多文章") }}
 
 </section>
 <section class="meetup-landing-page-lecturer">
@@ -82,7 +82,7 @@
 </section>
 
 <section class="back-to-community-section">
-    <a href="/community-cn/#activities">
+    <a href="/events/#activities">
         <button class="back-to-community">
           更多社区活动
         </button>
