--- a/layouts/partials/layout/mobile-sidebar-cn.html
+++ b/layouts/partials/layout/mobile-sidebar-cn.html
@@ -19,7 +19,7 @@
 
         <li {{ if eq $nav_active "docs"}}class="sel"{{end}}><a href="https://docs.pingcap.com/zh/tidb/stable/">文档</a></li>
         <li {{ if eq $nav_active "cases"}}class="sel"{{end}}><a href="/cases-cn">案例</a></li>
-        <li {{ if eq $nav_active "community"}}class="sel"{{end}}><a href="/community-cn">社区</a></li>
+        <li {{ if eq $nav_active "community"}}class="sel"{{end}}><a href="/events">社区</a></li>
         <li {{ if eq $nav_active "blog"}}class="sel"{{end}}><a href="/blog-cn">博客</a></li>
         <li {{ if eq $nav_active "about"}}class="sel"{{end}}><a href="/about-cn">关于</a></li>
         <li><a href="https://asktug.com" target="_blank"
