--- a/layouts/community-cn/devcon2019.html
+++ b/layouts/community-cn/devcon2019.html
@@ -45,7 +45,7 @@
           position: [116.436266,39.980987],
           icon: new AMap.Icon({
             size: new AMap.Size(32, 32), //图标大小
-            image: '/images/svgs/location.svg'
+            image: '/archived/images/svgs/location.svg'
           })
         })
 
@@ -167,7 +167,7 @@
     </section>
 
     <section class="back-to-community-section">
-        <a href="/community-cn/#activities">
+        <a href="/events/#activities">
             <button class="back-to-community">
               更多社区活动
             </button>
