CP-39 feat: update winners section

--- a/layouts/community-cn/hacking-camp-2021-season-2.html
+++ b/layouts/community-cn/hacking-camp-2021-season-2.html
@@ -64,8 +64,8 @@
           </div>
           <div class="misc">
             <div class="misc-btns">
-              <a href="{{ $i.btn_link }}" target="_blank"><button class="GitHub-repo">{{ $i.btn_name }}</button></a>
-              <a href="{{ $i.project_addr }}" target="_blank"><button class="GitHub-repo">项目地址</button></a>
+              <a href="{{ $i.btn_link }}" target="_blank">{{ $i.btn_name }}</a>
+              <a href="{{ $i.project_addr }}" target="_blank">项目地址</a>
             </div>
           </div>
         </div>
