--- a/src/less/community/hacking-camp-2021s2.less
+++ b/src/less/community/hacking-camp-2021s2.less
@@ -333,6 +333,36 @@
   }
 }
 
+.hackathon2020__section-awards {
+  .list {
+    display: flex;
+    flex-flow: row wrap;
+  }
+
+  .award-card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 296px;
+    height: 333px;
+    margin: 30px 10px;
+    background: url('/images/community/hacking-camp-2021-s2/card.svg') no-repeat;
+    background-size: cover;
+
+    h3, p {
+      padding: 0;
+      margin: 0;
+      color: #fff;
+      font-size: 1.25em;
+    }
+
+    h3 {
+      margin-bottom: 0.5em;
+    }
+  }
+}
+
 .hackathon2020__intro {
   max-width: 55em;
   margin: 0 auto;
@@ -397,17 +427,12 @@
 
   .winner-team {
     margin: 30px 15px;
-    width: 250px;
-    height: 335px;
+    width: 264px;
+    height: 280px;
     position: relative;
     background-color: #fff;
     box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.05),
       0 0 0 1px rgba(10, 10, 10, 0.02);
-
-    &.hacking-camp {
-      margin: 30px 15px;
-      height: 280px;
-    }
   }
 
   .list {
@@ -505,7 +530,7 @@
       font-size: 14px;
       position: absolute;
       top: 0;
-      background-color: #333333;
+      background-color: @mainColor;
       color: white;
       opacity: 0;
       padding: 1rem;
@@ -655,140 +680,6 @@
 .prize-container {
   justify-content: center;
   padding: 1em 0.75em !important;
-}
-
-.award-card {
-  position: relative;
-  width: 24em;
-  height: 18em;
-  margin: 1em;
-  background-image: url('https://download.pingcap.com/images/community/hackathon2020/bg-award-card-4.png');
-  background-color: #1f1f21;
-  color: #fff;
-  cursor: pointer;
-  background-repeat: no-repeat;
-  background-size: 72%;
-  background-position: left bottom;
-
-  &:hover {
-    background-size: 88%;
-    background-position: center;
-  }
-
-  &::after {
-    content: attr(data-name);
-    position: absolute;
-    top: 1em;
-    right: 1.25em;
-    font-size: 1.5em;
-    .uppercase();
-  }
-
-  &::before {
-    content: attr(data-team);
-    position: absolute;
-    top: 4em;
-    right: 2em;
-    font-size: 1em;
-    .uppercase();
-  }
-
-  &:hover::after,
-  &:hover::before {
-    display: none;
-  }
-
-  &:nth-child(1) {
-    background-image: url('https://download.pingcap.com/images/community/hackathon2020/bg-award-card-1.png');
-    background-color: #4242e8;
-
-    &:hover {
-      background-image: url('https://download.pingcap.com/images/community/hackathon2020/bg-award-card-1-hover.svg');
-    }
-  }
-
-  &:nth-child(2) {
-    background-image: url('https://download.pingcap.com/images/community/hackathon2020/bg-award-card-2.png');
-    background-color: #32e0a1;
-    color: @mainColor;
-
-    &:hover {
-      background-image: url('https://download.pingcap.com/images/community/hackathon2020/bg-award-card-2-hover.svg');
-    }
-  }
-
-  &:nth-child(3) {
-    background-image: url('https://download.pingcap.com/images/community/hackathon2020/bg-award-card-3.png');
-    background-color: #cc0b2f;
-
-    &:hover {
-      background-image: url('https://download.pingcap.com/images/community/hackathon2020/bg-award-card-3-hover.svg');
-    }
-  }
-
-  &:nth-child(4) {
-    &:hover {
-      background-image: url('https://download.pingcap.com/images/community/hackathon2020/bg-award-card-4-hover.jpg');
-    }
-  }
-
-  &:nth-child(5) {
-    &:hover {
-      background-image: url('https://download.pingcap.com/images/community/hackathon2020/bg-award-card-5-hover.jpg');
-    }
-  }
-
-  &:nth-child(6) {
-    &:hover {
-      background-image: url('https://download.pingcap.com/images/community/hackathon2020/bg-award-card-6-hover.jpg');
-    }
-  }
-
-  &:nth-child(7) {
-    &:hover {
-      background-image: url('https://download.pingcap.com/images/community/hackathon2020/bg-award-card-7-hover.svg');
-    }
-  }
-
-  &:nth-child(8) {
-    &:hover {
-      background-image: url('https://download.pingcap.com/images/community/hackathon2020/bg-award-card-8-hover.svg');
-    }
-  }
-
-  &.en {
-    &:nth-child(1):hover {
-      background-image: url('https://download.pingcap.com/images/community/hackathon2020/bg-award-card-1-hover-en.svg');
-    }
-
-    &:nth-child(2):hover {
-      background-image: url('https://download.pingcap.com/images/community/hackathon2020/bg-award-card-2-hover-en.svg');
-    }
-
-    &:nth-child(3):hover {
-      background-image: url('https://download.pingcap.com/images/community/hackathon2020/bg-award-card-3-hover-en.svg');
-    }
-
-    &:nth-child(4):hover {
-      background-image: url('https://download.pingcap.com/images/community/hackathon2020/bg-award-card-4-hover-en.jpg');
-    }
-
-    &:nth-child(5):hover {
-      background-image: url('https://download.pingcap.com/images/community/hackathon2020/bg-award-card-5-hover-en.jpg');
-    }
-
-    &:nth-child(6):hover {
-      background-image: url('https://download.pingcap.com/images/community/hackathon2020/bg-award-card-6-hover-en.jpg');
-    }
-
-    &:nth-child(7):hover {
-      background-image: url('https://download.pingcap.com/images/community/hackathon2020/bg-award-card-7-hover-en.svg');
-    }
-
-    &:nth-child(8):hover {
-      background-image: url('https://download.pingcap.com/images/community/hackathon2020/bg-award-card-8-hover-en.svg');
-    }
-  }
 }
 
 .tutor-item {
