--- a/src/less/community/hacking-camp-2021s2.less
+++ b/src/less/community/hacking-camp-2021s2.less
@@ -334,11 +334,6 @@
 }
 
 .hackathon2020__section-awards {
-  .list {
-    display: flex;
-    flex-flow: row wrap;
-  }
-
   .award-card {
     display: flex;
     justify-content: center;
@@ -350,7 +345,8 @@
     background: url('/images/community/hacking-camp-2021-s2/card.svg') no-repeat;
     background-size: cover;
 
-    h3, p {
+    h3,
+    p {
       padding: 0;
       margin: 0;
       color: #fff;
@@ -360,6 +356,14 @@
     h3 {
       margin-bottom: 0.5em;
     }
+  }
+}
+
+.hackathon2020__section-winners,
+.hackathon2020__section-awards,
+.hackathon2020__section-tuitors {
+  .list-flex {
+    justify-content: flex-start;
   }
 }
 
@@ -433,11 +437,6 @@
     background-color: #fff;
     box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.05),
       0 0 0 1px rgba(10, 10, 10, 0.02);
-  }
-
-  .list {
-    display: flex;
-    flex-flow: row wrap;
   }
 
   .team-info {
@@ -888,6 +887,10 @@
 }
 
 @media (max-width: 768px) {
+  .list-flex {
+    justify-content: center !important;
+  }
+
   .hackathon2020 {
     font-size: 0.875 * @REM;
 
@@ -924,10 +927,6 @@
   .schedule-card {
     min-height: 20em;
     padding: 2em;
-  }
-
-  .award-card:not(:hover) {
-    background-size: 60%;
   }
 
   .tutor-item {
