--- a/src/less/community/hacking-camp-2021s2.less
+++ b/src/less/community/hacking-camp-2021s2.less
@@ -509,13 +509,9 @@
   }
 
   .thumbnail {
-    width: 100%;
-    height: 167px;
-    position: relative;
-
-    .thumbnail-img {
+    &, .thumbnail-img {
       width: 100%;
-      height: 100%;
+      height: 167px;
       display: block;
     }
 
@@ -526,9 +522,12 @@
     .thumbnail-text {
       .thumbnail-img();
 
+      text-align: left;
       font-size: 14px;
       position: absolute;
       top: 0;
+      bottom: 0;
+      z-index: 1;
       background-color: @mainColor;
       color: white;
       opacity: 0;
@@ -536,6 +535,10 @@
       line-height: 1.7;
       transition: opacity 0.5s ease;
       overflow: auto;
+
+      &.thumbnail-text-click {
+        height: auto !important;
+      }
     }
   }
 
