CP-39 docs: update texts

--- a/layouts/community-cn/hacking-camp-2021-season-2.html
+++ b/layouts/community-cn/hacking-camp-2021-season-2.html
@@ -22,7 +22,7 @@
           <a href="#about">关于 Hacking Camp</a>
         </li>
         <li class="navbar__item">
-          <a href="#winners">第一期入围项目</a>
+          <a href="#winners">本期入围项目</a>
         </li>
         <li class="navbar__item">
           <a href="#timeline">Hacking Camp 时间线</a>
@@ -47,10 +47,10 @@
   </section>
 
   <section class="hackathon2020__section hackathon2020__section-winners">
-		<h2 class="section__title" id="winners">第一期入围项目</h2>
+		<h2 class="section__title" id="winners">本期入围项目</h2>
     <div class="container">
       <p class="hackathon2020__intro">
-        第一期 Hacking Camp 共有 6 个项目入围，分别为 HugeGraph、Doris、Juicefs、TiBigData、TiDB for PostgreSQL 和 Serverlessdb for HTAP，都是机基于 TiDB 的生态项目。感兴趣的小伙伴可以加入讨论区或为项目贡献自己的一份力量～
+        本期 Hacking Camp 共有 6 个项目入围，分别为 HugeGraph、Doris、Juicefs、TiBigData、TiDB for PostgreSQL 和 Serverlessdb for HTAP，都是机基于 TiDB 的生态项目。感兴趣的小伙伴可以加入讨论区或为项目贡献自己的一份力量～
       </p>
       <div class="list-flex">
         {{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.winners -}}
