--- a/layouts/community-cn/hacking-camp-2021-season-2.html
+++ b/layouts/community-cn/hacking-camp-2021-season-2.html
@@ -146,14 +146,16 @@
 			<h3 class="sponsor-type">独家冠名</h3>
 			<div class="list-flex container">
 				{{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.exclusive -}}
-				<a href="{{ $i.link }}" target="_blank" rel="noopener noreferrer">
-					<img
-						class="lazy logo-{{ $i.name }}"
-						data-original="/images/community/hacking-camp-2021-s2/logos/{{ $i.name }}.svg"
-						src="/images/svgs/loader-spinner.svg"
-						alt="sponsor logo"
-					/>
-				</a>
+        <div class="img-wrapper">
+          <a href="{{ $i.link }}" target="_blank" rel="noopener noreferrer">
+            <img
+              class="lazy logo-{{ $i.name }}"
+              data-original="/images/community/hacking-camp-2021-s2/logos/{{ $i.name }}.svg"
+              src="/images/svgs/loader-spinner.svg"
+              alt="sponsor logo"
+            />
+          </a>
+        </div>
 				{{- end -}}
 			</div>
 		</div>
@@ -162,14 +164,16 @@
 			<h3 class="sponsor-type">协办方</h3>
 			<div class="list-flex container">
 				{{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.sponsors1 -}}
-				<a href="{{ $i.link }}" target="_blank" rel="noopener noreferrer">
-					<img
-						class="lazy logo-{{ $i.name }}"
-						data-original="/images/community/hacking-camp-2021-s2/logos/{{ $i.name }}.svg"
-						src="/images/svgs/loader-spinner.svg"
-						alt="sponsor logo"
-					/>
-				</a>
+        <div class="img-wrapper">
+          <a href="{{ $i.link }}" target="_blank" rel="noopener noreferrer">
+            <img
+              class="lazy logo-{{ $i.name }}"
+              data-original="/images/community/hacking-camp-2021-s2/logos/{{ $i.name }}.svg"
+              src="/images/svgs/loader-spinner.svg"
+              alt="sponsor logo"
+            />
+          </a>
+        </div>
 				{{- end -}}
 			</div>
 		</div>
@@ -178,14 +182,16 @@
 			<h3 class="sponsor-type">支持企业及社区</h3>
 			<div class="list-flex container">
 				{{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.sponsors2 -}}
-				<a href="{{ $i.link }}" target="_blank" rel="noopener noreferrer">
-					<img
-						class="lazy logo-{{ $i.name }}"
-						data-original="/images/community/hacking-camp-2021-s2/logos/{{ $i.name }}.svg"
-						src="/images/svgs/loader-spinner.svg"
-						alt="sponsor logo"
-					/>
-				</a>
+        <div class="img-wrapper">
+          <a href="{{ $i.link }}" target="_blank" rel="noopener noreferrer">
+            <img
+              class="lazy logo-{{ $i.name }}"
+              data-original="/images/community/hacking-camp-2021-s2/logos/{{ $i.name }}.svg"
+              src="/images/svgs/loader-spinner.svg"
+              alt="sponsor logo"
+            />
+          </a>
+        </div>
 				{{- end -}}
 			</div>
 		</div>
