Fix devcon2021 links to old devcons (#2)

--- a/layouts/community-cn/devcon2021.html
+++ b/layouts/community-cn/devcon2021.html
@@ -350,11 +350,11 @@ DevCon 2021
         <div class="container">
             <h2 id="notice" class="section-title">往期回顾</h2>
             <div class="review-list">
-                <a href="/community-cn/devcon2020/" class="item"><img
+                <a href="/events/devcon2020/" class="item"><img
                         src="/images/community/devcon2021/review-devcon2020.png" /></a>
-                <a href="/community-cn/devcon2019/" class="item"><img
+                <a href="/events/devcon2019/" class="item"><img
                         src="/images/community/devcon2021/review-devcon2019.png" /></a>
-                <a href="/community-cn/devcon2018/" class="item"><img
+                <a href="/events/devcon2018/" class="item"><img
                         src="/images/community/devcon2021/review-devcon2018.png" /></a>
             </div>
         </div>
