chore: update medias logo on devcon2021'

--- a/src/less/community/devcon2021.less
+++ b/src/less/community/devcon2021.less
@@ -655,8 +655,8 @@
             justify-content: space-around;
 
             img {
-                width: 200px;
-                height: 100%;
+                width: auto;
+                height: 120px;
                 padding: 1rem;
             }
         }
