CP-39 docs: update texts

--- a/layouts/community-cn/hacking-camp-2021-season-2.html
+++ b/layouts/community-cn/hacking-camp-2021-season-2.html
@@ -116,9 +116,7 @@
     <h2 class="section__title" id="judges">Hacking Camp 组委会与导师团</h2>
     <div class="container">
       <p class="hackathon2020__intro">
-        Hacking Camp 组委会为活动协调资源、制定项目毕业标准等。本次组委会由部分
-        TOC 成员以及xxx 资本、xx
-        资本组成。导师团负责与团队沟通并提供项目的指导方向，对团队的项目规划提出合理的建议。
+        Hacking Camp 组委会为活动协调资源、制定项目毕业标准等。导师团负责与团队沟通并提供项目的指导方向，对团队的项目规划提出合理的建议。
       </p>
       <div class="list-flex">
         {{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.judges -}}
