--- a/layouts/community-cn/hacking-camp-2021-season-2.html
+++ b/layouts/community-cn/hacking-camp-2021-season-2.html
@@ -1,14 +1,14 @@
 {{- define "title" -}}
-	{{ $.Scratch.Set "metaTitle" "TiDB Hacking Camp" }}
-	TiDB Hacking Camp
+  {{ $.Scratch.Set "metaTitle" "TiDB Hacking Camp -- 生态" }}
+  TiDB Hacking Camp -- 生态
 {{- end -}}
 
 {{- define "headTpl" -}}
-	{{$.Scratch.Set "nav_active" "community"}}
-	{{ $.Scratch.Set "data_i18_cn" true }}
+  {{$.Scratch.Set "nav_active" "community"}}
+  {{ $.Scratch.Set "data_i18_cn" true }}
   {{ $.Scratch.Set "data_i18_link" "/community/events/hackathon2020" }}
-	{{- partial "head/preload-css" (dict "href" "/css/community/hacking-camp-2021s2.css") -}}
-	{{- partial "head/preload-css" (dict "href" "/css/tidb-planet/modal.css") -}}
+  {{- partial "head/preload-css" (dict "href" "/css/community/hacking-camp-2021s2.css") -}}
+  {{- partial "head/preload-css" (dict "href" "/css/tidb-planet/modal.css") -}}
 {{- end -}}
 
 {{- define "main" -}}
@@ -38,19 +38,22 @@
     <h2 class="section__title" id="about">关于 Hacking Camp</h2>
     <div class="container">
       <p class="hackathon2020__intro left-align">
-        TiDB Hacking Camp 是一个长期的孵化项目，每年举办 1-3 期。活动联合了生态伙伴、合作企业等，旨在帮助 TiDB 生态项目从社区中获取更多资源和帮助，使其能够快速成长达到有实际应用场景的成熟阶段。本期的主题是「生态」。入选项目都将围绕着 TiDB 周边生态进行打磨。
+        TiDB Hacking Camp 是一个长期的孵化项目，每年举办 1-3 期。活动联合了生态伙伴、合作企业等，旨在帮助 TiDB
+        生态项目从社区中获取更多资源和帮助，使其能够快速成长达到有实际应用场景的成熟阶段。本期的主题是「生态」。入选项目都将围绕着 TiDB 周边生态进行打磨。
       </p>
       <p class="hackathon2020__intro left-align">
-        本次活动的入围项目也面向社区公开招募贡献者。只要解决本期任一项目的 issue 就可以成为 Hacking Camp 的 contributor，获得贡献者好礼！对于开发者来说，通过深度参与和贡献 Hacking Camp 中的孵化项目，不仅可以提升技术实力，活跃的贡献者还能提高在开源社区中的影响力。
+        本次活动的入围项目也面向社区公开招募贡献者。只要解决本期任一项目的 issue 就可以成为 Hacking Camp 的 contributor，获得贡献者好礼！对于开发者来说，通过深度参与和贡献 Hacking Camp
+        中的孵化项目，不仅可以提升技术实力，活跃的贡献者还能提高在开源社区中的影响力。
       </p>
     </div>
   </section>
 
   <section class="hackathon2020__section hackathon2020__section-winners">
-		<h2 class="section__title" id="winners">本期入围项目</h2>
+    <h2 class="section__title" id="winners">本期入围项目</h2>
     <div class="container">
       <p class="hackathon2020__intro">
-        本期 Hacking Camp 共有 6 个项目入围，分别为 HugeGraph、Doris、Juicefs、TiBigData、TiDB for PostgreSQL 和 Serverlessdb for HTAP，都是机基于 TiDB 的生态项目。感兴趣的小伙伴可以加入讨论区或为项目贡献自己的一份力量～
+        本期 Hacking Camp 共有 6 个项目入围，分别为 HugeGraph、Doris、Juicefs、TiBigData、TiDB for PostgreSQL 和 Serverlessdb for
+        HTAP，都是基于 TiDB 的生态项目。感兴趣的小伙伴可以加入讨论区或为项目贡献自己的一份力量～
       </p>
       <div class="list-flex">
         {{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.winners -}}
@@ -67,7 +70,7 @@
           <div class="misc">
             <div class="misc-btns">
               {{ with $i.btn_link }}
-                <a href="{{ $i.btn_link }}" target="_blank">{{ $i.btn_name }}</a>
+              <a href="{{ $i.btn_link }}" target="_blank">{{ $i.btn_name }}</a>
               {{ end }}
               <a href="{{ $i.project_addr }}" target="_blank">项目地址</a>
             </div>
@@ -75,8 +78,8 @@
         </div>
         {{- end -}}
       </div>
-		</div>
-	</section>
+    </div>
+  </section>
 
   <section class="hackathon2020__section">
     <h2 class="section__title" id="timeline">Hacking Camp 时间线</h2>
@@ -100,10 +103,10 @@
     <div class="container">
       <div class="list-flex">
         {{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.awards -}}
-          <div class="award-card">
-            <h3>{{ $i.title }}</h3>
-            <p>{{ $i.prize }}</p>
-          </div>
+        <div class="award-card">
+          <h3>{{ $i.title }}</h3>
+          <p>{{ $i.prize }}</p>
+        </div>
         {{- end -}}
       </div>
       <p class="hackathon2020__intro">
@@ -122,12 +125,8 @@
         {{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.judges -}}
         <div class="tutor-item">
           <div class="tutor__avatar">
-            <img
-              class="lazy"
-              src="/images/svgs/loader-spinner.svg"
-              data-original="{{ $i.avatar }}"
-              alt="Tutor avatar"
-            />
+            <img class="lazy" src="/images/svgs/loader-spinner.svg" data-original="{{ $i.avatar }}"
+              alt="Tutor avatar" />
           </div>
           <div class="tutor__name">{{ $i.name }} | {{ $i.team_name }}</div>
           <div class="tutor__title">{{ $i.word }}</div>
@@ -140,59 +139,50 @@
   <section class="hackathon2020__section partners-list">
     <h2 class="section__title" id="partners">赞助合作</h2>
 
-		<div class="exclusive-sponvers">
-			<h3 class="sponsor-type">独家冠名</h3>
-			<div class="list-flex container">
-				{{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.exclusive -}}
+    <div class="exclusive-sponvers">
+      <h3 class="sponsor-type">独家冠名</h3>
+      <div class="list-flex container">
+        {{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.exclusive -}}
         <div class="img-wrapper">
           <a href="{{ $i.link }}" target="_blank" rel="noopener noreferrer">
-            <img
-              class="lazy logo-{{ $i.name }}"
+            <img class="lazy logo-{{ $i.name }}"
               data-original="/images/community/hacking-camp-2021-s2/logos/{{ $i.name }}.svg"
-              src="/images/svgs/loader-spinner.svg"
-              alt="sponsor logo"
-            />
+              src="/images/svgs/loader-spinner.svg" alt="sponsor logo" />
           </a>
         </div>
-				{{- end -}}
-			</div>
-		</div>
+        {{- end -}}
+      </div>
+    </div>
 
-		<div class="common-sponsors">
-			<h3 class="sponsor-type">协办方</h3>
-			<div class="list-flex container">
-				{{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.sponsors1 -}}
+    <div class="common-sponsors">
+      <h3 class="sponsor-type">协办方</h3>
+      <div class="list-flex container">
+        {{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.sponsors1 -}}
         <div class="img-wrapper">
           <a href="{{ $i.link }}" target="_blank" rel="noopener noreferrer">
-            <img
-              class="lazy logo-{{ $i.name }}"
+            <img class="lazy logo-{{ $i.name }}"
               data-original="/images/community/hacking-camp-2021-s2/logos/{{ $i.name }}.svg"
-              src="/images/svgs/loader-spinner.svg"
-              alt="sponsor logo"
-            />
+              src="/images/svgs/loader-spinner.svg" alt="sponsor logo" />
           </a>
         </div>
-				{{- end -}}
-			</div>
-		</div>
+        {{- end -}}
+      </div>
+    </div>
 
-		<div class="common-sponsors">
-			<h3 class="sponsor-type">支持企业及社区</h3>
-			<div class="list-flex container">
-				{{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.sponsors2 -}}
+    <div class="common-sponsors">
+      <h3 class="sponsor-type">支持企业及社区</h3>
+      <div class="list-flex container">
+        {{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.sponsors2 -}}
         <div class="img-wrapper">
           <a href="{{ $i.link }}" target="_blank" rel="noopener noreferrer">
-            <img
-              class="lazy logo-{{ $i.name }}"
+            <img class="lazy logo-{{ $i.name }}"
               data-original="/images/community/hacking-camp-2021-s2/logos/{{ $i.name }}.svg"
-              src="/images/svgs/loader-spinner.svg"
-              alt="sponsor logo"
-            />
+              src="/images/svgs/loader-spinner.svg" alt="sponsor logo" />
           </a>
         </div>
-				{{- end -}}
-			</div>
-		</div>
+        {{- end -}}
+      </div>
+    </div>
   </section>
 </div>
 {{- end -}}
