CP-39 feat: update text

--- a/layouts/community-cn/hacking-camp-2021-season-2.html
+++ b/layouts/community-cn/hacking-camp-2021-season-2.html
@@ -42,7 +42,7 @@
         生态项目从社区中获取更多资源和帮助，使其能够快速成长达到有实际应用场景的成熟阶段。本期的主题是「生态」。入选项目都将围绕着 TiDB 周边生态进行打磨。
       </p>
       <p class="hackathon2020__intro left-align">
-        本次活动的入围项目也面向社区公开招募贡献者。只要解决本期任一项目的 issue 就可以成为 Hacking Camp 的 contributor，获得贡献者好礼！对于开发者来说，通过深度参与和贡献 Hacking Camp
+        本次活动的入围项目也面向社区公开招募贡献者。只要解决本期任一项目的 issue 就可以成为 Hacking Camp 的 Contributor，获得贡献者好礼！对于开发者来说，通过深度参与和贡献 Hacking Camp
         中的孵化项目，不仅可以提升技术实力，活跃的贡献者还能提高在开源社区中的影响力。
       </p>
     </div>
@@ -52,7 +52,7 @@
     <h2 class="section__title" id="winners">本期入围项目</h2>
     <div class="container">
       <p class="hackathon2020__intro">
-        本期 Hacking Camp 共有 6 个项目入围，分别为 HugeGraph、Doris、Juicefs、TiBigData、TiDB for PostgreSQL 和 Serverlessdb for
+        本期 Hacking Camp 共有 6 个项目入围，分别为 HugeGraph、Doris、JuiceFS、TiBigData、TiDB for PostgreSQL 和 Serverlessdb for
         HTAP，都是基于 TiDB 的生态项目。感兴趣的小伙伴可以加入讨论区或为项目贡献自己的一份力量～
       </p>
       <div class="list-flex">
@@ -110,7 +110,7 @@
         {{- end -}}
       </div>
       <p class="hackathon2020__intro">
-        所有参与项目的贡献者都可以获得活动周边 Tshirt！
+        所有参与项目的贡献者都可以获得活动周边 T-shirt！
       </p>
     </div>
   </section>
